--- a/doom/config.org
+++ b/doom/config.org
@@ -1,25 +1,77 @@
-;;; $DOOMDIR/config.el -*- lexical-binding: t; -*-
+#+title: Config
+#+author: Haadi Khan
+#+PROPERTY: tangle yes
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;; THEME SECTION ;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+* Table of Contents :toc:
+- [[#packages][Packages]]
+- [[#theme][Theme]]
+  - [[#doom-specific][Doom Specific]]
+  - [[#quality-of-life][Quality of Life]]
+- [[#keyboard][Keyboard]]
+  - [[#evil-rebinds][Evil Rebinds]]
+  - [[#org][Org]]
+  - [[#buffers][Buffers]]
+- [[#org-1][Org]]
+  - [[#bullets][Bullets]]
+  - [[#fonts][Fonts]]
+  - [[#toc][TOC]]
+  - [[#todo][Todo]]
+  - [[#latex][LaTeX]]
+- [[#code][Code]]
+  - [[#base-lsp-config][Base LSP Config]]
+  - [[#dap-config][DAP Config]]
+  - [[#rust][Rust]]
+  - [[#python][Python]]
+  - [[#cc][C/C++]]
+- [[#latex-1][LaTeX]]
+  - [[#base-latex][Base LaTeX]]
+  - [[#preview][Preview]]
+  - [[#cdlatex-w-yasnippet][CDLatex w/ Yasnippet]]
+  - [[#org-tables][Org Tables]]
+
+* Packages
+Doom splits packages into their own file. Here's all the additional packages I load
+#+begin_src emacs-lisp :tangle packages.el
+;; (package! builtin-package :disable t)
+(package! atom-one-dark-theme)
+(package! org-superstar)
+(package! toc-org)
+(package! org-autolist)
+(package! elfeed-goodies)
+(package! real-auto-save)
+(package! cdlatex)
+
+(package! lsp-pyright)
+(package! ccls)
+(package! copilot
+  :recipe (:host github :repo "zerolfx/copilot.el" :files ("*.el" "dist")))
+#+end_src
+
+* Theme
+** Doom Specific
+Removing title bar and customizing basic doom settings
+#+begin_src emacs-lisp :tangle config.el
 (add-to-list 'default-frame-alist '(undecorated-round . t))
 (load-theme 'atom-one-dark t)
 (setq doom-font (font-spec :family "Recursive Monospace" :size 16 :weight 'regular) doom-variable-pitch-font (font-spec :family "Recursive" :size 16 :weight 'regular))
 (setq doom-symbol-font (font-spec :family "SF Pro" ))
-(setq display-line-numbers-type 'relative)
+(setq fancy-splash-image "~/.config/doom/emacs-dash.png")
+#+end_src
+
+** Quality of Life
+#+begin_src emacs-lisp :tangle config.el
+(setq display-line-numbers-type 'visual)
 (setq-default line-spacing 0.12)
 (setq-default tab-width 4) ;; 4 width tabs
+(setq scroll-margin 8)
+(setq highlight-indent-guides-method 'column)
+(setq mode-require-final-newline nil) ;; Removes snippets adding a new line
+#+end_src
 
-(setq highlight-indent-guides-method 'bitmap)
-(setq highlight-indent-guides-bitmap-function 'highlight-indent-guides--bitmap-line)
-(setq highlight-indent-guides-auto-character-face-perc 50)
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;;; KBD SECTION ;;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-(map! :leader :desc "List Buffers" :n "b l" #'list-buffers)
-
+* Keyboard
+Adding some basic keybinds
+** Evil Rebinds
+#+begin_src emacs-lisp :tangle config.el
 (defun haadi/controlu ()
   (evil-scroll-up 0)
   (evil-scroll-line-to-center (line-number-at-pos))
@@ -28,6 +80,7 @@
   (evil-scroll-down 0)
   (evil-scroll-line-to-center (line-number-at-pos))
   )
+;; Need to figure out why search commands don't work...
 (defun haadi/searchfwd ()
   (evil-search-next)
   (evil-scroll-line-to-center (line-number-at-pos))
@@ -39,13 +92,23 @@
 
 (map! :map general-override-mode-map
       :n "<C-u>" #'haadi/controlu
-      :n "<C-d>" #'haadi/controld
       :desc "Goto mark" :n "M" #'evil-goto-mark
       )
+#+end_src
+** Org
+#+begin_src emacs-lisp :tangle config.el
+(map! :map org-mode-map :leader :desc "Babel Tangle" :n "m k" #'org-babel-tangle)
+(map! :map org-mode-map :leader :desc "Babel Tangle File" :n "m K" #'org-babel-tangle-file)
+#+end_src
+** Buffers
+#+begin_src emacs-lisp :tangle config.el
+(map! :leader :desc "List Buffers" :n "b l" #'list-buffers)
+#+end_src
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;;; ORG SECTION ;;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+* Org
+** Bullets
+Makes the bullets fun
+#+begin_src emacs-lisp :tangle config.el
 (setq org-directory "~/org/")
 
 (use-package! org-superstar ; "prettier" bullets
@@ -61,7 +124,10 @@
           ("DONE" . 9745)
           ("[X]"  . 9745)))
   )
-
+#+end_src
+** Fonts
+Make the fonts bettter sized
+#+begin_src emacs-lisp :tangle config.el
 (use-package! evil-org
   :config
   (custom-set-faces
@@ -75,7 +141,12 @@
    )
   ;; (add-hook 'org-mode-hook 'org-fragtog-mode)
   )
+(setq org-hide-emphasis-markers t) ;; Removes ** around bolded text etc.
+#+end_src
 
+** TOC
+Add automatic table of contents
+#+begin_src emacs-lisp :tangle config.el
 ;; Automatic bulleting
 (use-package toc-org
   :commands toc-org-enable
@@ -84,41 +155,88 @@
 (add-hook 'org-mode-hook
           (lambda () (org-autolist-mode)))
 
-(add-hook 'org-mode org-cdlatex-mode)
+;;(add-hook 'org-mode org-cdlatex-mode)
+#+end_src
+** Todo
+Settings for Todo
+#+begin_src emacs-lisp :tangle config.el
+(setq org-todo-keywords        ; This overwrites the default Doom org-todo-keywords
+      '((sequence
+         "TODO(t)"
+         "TEST(T)"
+         "PHYS 2218(a)"
+         "PHYS 3316(s)"
+         "PHYS 3318(d)"
+         "CS 3410(f)"
+         "CS 4780(g)"
+         "SCIOLY(h)"
+         "|"
+         "DONE(D)"
+         "PROGRESS(p)"
+         "CANCELLED(c)"
+         "|"
+         "PROG(P)"))
+      )
+(setq org-todo-keyword-faces'(
+                              ("TODO" . org-warning)
+                              ("TEST" .  (:foreground "#e06c75" :weight bold))
+                              ("PHYS 3316" . "#d19a66")
+                              ("PHYS 3318" . "#61afef")
+                              ("PHYS 2218" . "#be5046")
+                              ("CS 4780" . "#56b6c2")
+                              ("CS 3410" . "#98c379")
+                              ("SCIOLY" . "#98c379")
+                              ("DONE" . "#5c6370")
+                              ("PROGRESS" . "#5c6370")
+                              ("CANCELLED" . (:foreground "#4b5263" :weight bold))
+                              ("PROG" . "#e5c07b")
+                              ))
+#+end_src
 
-(setq org-hide-emphasis-markers t)
+** LaTeX
+For some reason (even on emacs-plus) LaTeX embeds look like utter garbage on Mac (and Linux too for that matter). So, we do some elisp magic to make them look great! We render them at 2x the size, and then scale them down
+#+begin_src emacs-lisp :tangle config.el
+(setq org-latex-create-formula-image-program 'dvisvgm)
+(plist-put org-format-latex-options :scale 3)
+(defun my/image-scale-advice (image)
+  (let* ((factor (image-property image :scale))
+         (new-factor (if factor
+                         (/ factor 2.0)
+                       0.5)))
+    (image--set-property image :scale new-factor)
+    image))
+(advice-add 'org--create-inline-image :filter-return #'my/image-scale-advice)
+(defun my/overlay-scale-advice (beg end image &optional imagetype)
+  (mapc (lambda (ov) (if (equal (overlay-get ov 'org-overlay-type) 'org-latex-overlay)
+                                (overlay-put ov
+                                             'display
+                                             (list 'image :type (or (intern imagetype) 'png) :file image :ascent 'center :scale 0.5))))
+        (overlays-at beg)))
+(advice-add 'org--make-preview-overlay :after #'my/overlay-scale-advice)
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;; LaTeX SECTION ;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-(add-hook 'LaTeX-mode-hook #'turn-on-cdlatex)
-(add-hook 'LaTeX-mode-hook #'preview-buffer)
-
-(defun my-yas-try-expanding-auto-snippets ()
-  (when (and (boundp 'yas-minor-mode) yas-minor-mode)
-    (let ((yas-buffer-local-condition ''(require-snippet-condition . auto)))
-      (yas-expand))))
-
-(add-hook 'post-self-insert-hook #'my-yas-try-expanding-auto-snippets)
-(remove-hook 'org-mode-hook #'company-mode)
-
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;;; DEV SECTION ;;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-
+#+end_src
+* Code
+** Base LSP Config
+Some basic config stuff. I added way too much ram for garbage collection, but I have the RAM so I may as well use it to make sure that my editing isn't slow lol
+#+begin_src emacs-lisp :tangle config.el
 (setq gc-cons-threshold 400000000) ;; 400mb
 (setq read-process-output-max (* 8192 1024)) ;; 4mb
 (setq company-minimum-prefix-length 1)
 (setq lsp-idle-delay 0.1)
 (setq lsp-log-io nil) ; if set to true can cause a performance hit
-
 (setq lsp-completion-show-kind t)
+(setq company-idle-delay 0.01)
+#+end_src
 
-
+Auto save when working on programming
+#+begin_src emacs-lisp :tangle config.el
 (add-hook 'prog-mode-hook 'real-auto-save-mode)
 (setq real-auto-save-interval 3) ;; in seconds
+#+end_src
 
-(setq company-idle-delay 0.01)
+** DAP Config
+Config for DAP. Still a WIP
+#+begin_src emacs-lisp :tangle config.el
 
 ;; (use-package dap-mode
 ;;   :ensure
@@ -142,6 +260,11 @@
 ;; (with-eval-after-load 'dap-mode
 ;;   (setq dap-default-terminal-kind "integrated") ;; Make sure that terminal programs open a term for I/O in an Emacs buffer
 ;;   (dap-auto-configure-mode +1))
+#+end_src
+
+** Rust
+Rust!
+#+begin_src emacs-lisp :tangle config.el
 (after! rustic
   (setq rustic-format-on-save nil))
 
@@ -157,10 +280,26 @@
               ("C-<tab>" . 'copilot-accept-completion-by-word)))
 
 (map! :leader :desc "Toggle copilot" :n "c g" #'copilot-mode)
+#+end_src
+** Python
+#+begin_src emacs-lisp :tangle config.el
+(use-package lsp-pyright
+  :ensure t
+  :hook (python-mode . (lambda ()
+                          (require 'lsp-pyright)
+                          (lsp))))  ; or lsp-deferred
+#+end_src
+** C/C++
+#+begin_src emacs-lisp :tangle config.el
+(require 'ccls)
+(setq ccls-executable "/opt/homebrew/bin/ccls")
+#+end_src
+* LaTeX
+This wasn't written by me. Will parse through this eventually. tl;dr, makes emacs like that Gilles Castel blog post (RIP)
 
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
-;;;;;;;;; TEX SECTION ;;;;;;;;;;
-;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
+** Base LaTeX
+#+begin_src emacs-lisp :tangle config.el
+(map! :leader :desc "Toggle TeX Preview" :n "m j" #'org-latex-preview)
 ;; AucTeX settings - almost no changes
 (use-package latex
   :ensure auctex
@@ -187,6 +326,9 @@
                                     calc-prefer-frac t
                                     calc-angle-mode rad))))))))
 
+#+end_src
+** Preview
+#+begin_src emacs-lisp :tangle config.el
 (use-package preview
   :after latex
   :hook ((LaTeX-mode . preview-larger-previews))
@@ -196,6 +338,8 @@
           (lambda () (* 1.25
                         (funcall (preview-scale-from-face)))))))
 
+#+end_src
+#+begin_src emacs-lisp :tangle config.el
 ;; CDLatex settings
 (use-package cdlatex
   :ensure t
@@ -224,6 +368,10 @@
       (let ((yas-buffer-local-condition ''(require-snippet-condition . auto)))
         (yas-expand)))))
 
+#+end_src
+
+** CDLatex w/ Yasnippet
+#+begin_src emacs-lisp :tangle config.el
 ;; CDLatex integration with YaSnippet: Allow cdlatex tab to work inside Yas
 ;; fields
 (use-package cdlatex
@@ -263,6 +411,10 @@
           (cdlatex-tab)
         (yas-next-field-or-maybe-expand)))))
 
+#+end_src
+
+** Org Tables
+#+begin_src emacs-lisp :tangle config.el
 ;; Array/tabular input with org-tables and cdlatex
 (use-package org-table
   :after cdlatex
@@ -299,7 +451,7 @@
   (defun lazytab-orgtbl-edit ()
     (advice-add 'orgtbl-ctrl-c-ctrl-c :after #'lazytab-orgtbl-replace)
     (orgtbl-mode 1)
-    (open-line 1)
+
     (insert "\n|"))
 
   (defun lazytab-orgtbl-replace (_)
@@ -345,3 +497,6 @@
     (if (bound-and-true-p cdlatex-mode)
         (cdlatex-tab)
       (org-table-next-field))))
+
+(remove-hook 'org-mode-hook #'company-mode)
+#+end_src
