--- a/doom/snippets.org
+++ b/doom/snippets.org
@@ -1369,6 +1369,17 @@ $0 \\\\
 # --
 \left{ $1 \right}
 #+end_src
+*** vec
+#+begin_src yasnippet :tangle snippets/latex-mode/8020.yasnippet
+# -*- mode: snippet -*-
+# name: vec
+# key: vec
+# expand-env: ((argument (quote t)))
+# condition: (and (texmathp) 'auto)
+# group: math
+# --
+`(condition-case nil (progn (backward-sexp) (kill-sexp) (delete-char 1)) (error (setq argument 'nil)))`\\vec{`(if argument (current-kill 0))`}$0
+#+end_src
 ** Misc
 *** Inline Math
 #+begin_src yasnippet :tangle snippets/latex-mode/9000.yasnippet
